# learn_microservice

./: README.md
serviceA/: Dockerfile  go.mod  go.sum
serviceA/greeter_client/: main.go
serviceA/greeter_server/: main.go
serviceA/helloworld/: helloworld.pb.go  helloworld_grpc.pb.go
serviceB/: Cargo.toml  Dockerfile  build.rs
serviceB/proto/: base64encoder.proto
serviceB/src/: client.rs  server.rs
