[package]
name = "service_b"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "serviceb-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "serviceb-client"
path = "src/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
base64 = "0.13.1"

[build-dependencies]
tonic-build = "0.8"